# skyterm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  package-deb.sh  package-macos.sh  package-rpm.sh
.github/workflows/: release.yml
skyterm-core/: Cargo.toml
skyterm-core/src/: config.rs  grid.rs  lib.rs  parser.rs  theme.rs
skyterm-core/tests/: parser_basic.rs
skyterm-gui/: Cargo.toml
skyterm-gui/debian/: postinst
skyterm-gui/resources/: skyterm.desktop
skyterm-gui/src/: app.rs  font.rs  input.rs  main.rs  pty.rs  renderer.rs
