[workspace]
resolver = "2"
members = ["skyterm-core", "skyterm-gui"]

[workspace.package]
version = "0.1.6"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/perfecto25/skyterm"

[workspace.dependencies]
vte = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"


# cargo-deb path bases (verified with cargo-deb 3.7): `license-file` and the
# resource assets are resolved relative to THIS crate's dir (skyterm-gui/), so
# `../LICENSE-MIT` reaches the workspace root and `resources/...` is local. The
# binary uses cargo-deb's special `target/release/` token, which maps to the
# shared workspace build output regardless of where you invoke cargo-deb.
license-file = ["../LICENSE-MIT", "0"]
depends = "libgtk-4-1 (>= 4.12), libfreetype6, libgl1"
section = "x11"
priority = "optional"
assets = [
    ["target/release/skyterm", "usr/bin/skyterm", "755"],
    ["resources/skyterm.svg", "usr/share/icons/hicolor/scalable/apps/skyterm.svg", "644"],
    ["resources/skyterm.desktop", "usr/share/applications/skyterm.desktop", "644"],
]
