[package]
name = "skyterm-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GTK4 + OpenGL skyterm front-end."

[[bin]]
name = "skyterm"
path = "src/main.rs"

[dependencies]
skyterm-core = { path = "../skyterm-core" }
gtk4 = { version = "0.11", features = ["v4_12"] }
glow = "0.13"
epoxy = "0.1"
libloading = "0.8"
freetype-rs = "0.36"
portable-pty = "0.9"
async-channel = "2"
anyhow = "1"
log = { workspace = true }
env_logger = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }

[package.metadata.generate-rpm]
name = "skyterm"
summary = "GPU-rendered terminal emulator"
license = "MIT"
assets = [
    { source = "../target/release/skyterm", dest = "/usr/bin/skyterm", mode = "0755" },
    { source = "resources/skyterm.svg", dest = "/usr/share/icons/hicolor/scalable/apps/skyterm.svg", mode = "0644" },
    { source = "resources/skyterm.desktop", dest = "/usr/share/applications/skyterm.desktop", mode = "0644" },
]

[package.metadata.generate-rpm.requires]
"gtk4" = ">= 4.12"
freetype = "*"
mesa-libGL = "*"

[package.metadata.deb]
name = "skyterm"
maintainer = "skyterm contributors"
copyright = "2024, skyterm contributors"
license-file = ["../LICENSE-MIT", "4"]
depends = "libgtk-4-1 (>= 4.12), libfreetype6, libgl1"
section = "x11"
priority = "optional"
assets = [
    ["../target/release/skyterm", "usr/bin/skyterm", "755"],
    ["resources/skyterm.svg", "usr/share/icons/hicolor/scalable/apps/skyterm.svg", "644"],
    ["resources/skyterm.desktop", "usr/share/applications/skyterm.desktop", "644"],
]
